--- a/src/_patterns/02-components/bolt-band/src/band.scss
+++ b/src/_patterns/02-components/bolt-band/src/band.scss
@@ -50,14 +50,12 @@ bolt-band {
   display: block;
   display: flex; // So children increase in height
   width: 100%;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
   max-height: none;
+  transform: translate3d(0, 0, 0);
+  will-change: height;
 
   &.is-expanded {
     height: 56.25vw;
-  }
-
-  &.is-animating {
-    transition: transform 0.5s ease-in-out;
   }
 }
