--- a/src/_patterns/02-components/bolt-video/src/_video.scss
+++ b/src/_patterns/02-components/bolt-video/src/_video.scss
@@ -35,7 +35,8 @@
   position: relative;
   border-radius: 6px;
   -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFW…9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
-  transition: border-radius .4s cubic-bezier(.645, 0, .355, 1);
+  transition: border-radius 0.4s cubic-bezier(0.645, 0, 0.355, 1);
+
   .is-collapsed & {
     border-radius: 14px;
   }
@@ -54,8 +55,8 @@
 
   position: absolute;
   z-index: 1000;
-  top: bolt-spacing(xxsmall);
-  right: bolt-spacing(xxsmall);
+  top: bolt-spacing(xsmall);
+  right: bolt-spacing(xsmall);
   transition: all 0.3s ease;
   opacity: 0; // Initial state before brightcove video player kicks in
 
@@ -72,4 +73,58 @@
   &:hover {
     opacity: 1;
   }
+}
+
+.c-bolt-video__close-wrapper {
+  position: relative;
+  width: 100%;
+}
+
+
+
+// Vertically and horizontally center the default Brightcove share overlay content
+.vjs-modal-dialog .vjs-modal-dialog-content {
+  height: auto;
+  max-width: 1024px;
+  margin: 0 auto;
+  position: relative; // override position: absolute
+}
+
+.video-js {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video-js .vjs-modal-dialog {
+  overflow: auto; // so psuedo layer below shows up
+  box-sizing: border-box;
+  z-index: 100;
+  max-width: 768px;
+  margin: 0 auto;
+  overflow: visible; // override default overflow: hidden
+  background: transparent; // override default gradient so the psuedo layer is the only backgrond showing up
+  position: relative; // override position: absolute
+  height: auto; // override height: 100%;
+
+  &:before {
+    content: '';
+    display: block;
+    background-color: rgba(bolt-color(black), 0.8);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.8), rgba(255, 255, 255, 0));
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+    bottom: -9990px;
+    right: -9990px;
+    opacity: 1;
+    pointer-events: none;
+  }
+}
+
+.vjs-social-overlay .vjs-social-description,
+.vjs-social-overlay .vjs-social-title {
+  white-space: normal;
 }
