--- a/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
+++ b/src/_patterns/02-components/bolt-tooltip/src/tooltip.twig
@@ -1,8 +1,10 @@
-<div class="c-bolt-band">
+{# Tooltip is an unpublished component, please only use the HTML here as a reference. This twig file is not usable. #}
+
+<div class="c-bolt-band c-bolt-band--medium t-bolt-xlight">
   <p>
     You can
-    <span class="c-bolt-tooltip c-bolt-tooltip--action is-left is-down">
-      <mark class="c-bolt-tooltip__trigger is-active" aria-describedby="tooltip-1">
+    <span class="c-bolt-tooltip c-bolt-tooltip--action is-align-left is-push-down">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-1">
         hover over this
       </mark>
       <span id="tooltip-1" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
@@ -24,85 +26,275 @@
     to see the tooltip.
   </p>
   <p>
-    Here is a second paragraph of text. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. And then
-    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-center is-down">
+    Here is a second paragraph of text. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac lectus vestibulum faucibus eget in metus.
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-align-center is-push-down">
+      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-icon">
+        {% include "@bolt/icon.twig" with {
+          "name": "info-open",
+          "size": "medium"
+        } only %}
+      </mark>
+      <span id="tooltip-icon" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+        <span class="c-bolt-tooltip__content-bubble">
+          <span class="c-bolt-text c-bolt-text--small">Icon</span>
+        </span>
+      </span>
+    </span>
+    In pellentesque faucibus vestibulum. Nulla at nulla justo, eget luctus tortor. Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. And then
+    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-align-center is-push-down">
       <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-2">
         another tooltip
       </mark>
       <span id="tooltip-2" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
         <span class="c-bolt-tooltip__content-bubble">
-          Short and sweet, and center
+          <span class="c-bolt-text c-bolt-text--small">Short and sweet, and center</span>
         </span>
       </span>
     </span>.
     Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus.
   </p>
-  <p>
-    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-left is-down">
-      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-left">
-        Left
-      </mark>
-      <span id="tooltip-left" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="c-bolt-tooltip__content-bubble">
-          left aligned
-        </span>
-      </span>
-    </span>
-    •
-    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-center is-down">
-      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-center">
-        Center
-      </mark>
-      <span id="tooltip-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="c-bolt-tooltip__content-bubble">
-          center aligned
-        </span>
-      </span>
-    </span>
-    •
-    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-right is-down">
-      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-right">
-        Right
-      </mark>
-      <span id="tooltip-right" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="c-bolt-tooltip__content-bubble">
-          right aligned
-        </span>
-      </span>
-    </span>
-  </p>
-  <p>
-    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-left is-up">
-      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-left">
-        Up Left
-      </mark>
-      <span id="tooltip-up-left" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="c-bolt-tooltip__content-bubble">
-          left aligned
-        </span>
-      </span>
-    </span>
-    •
-    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-center is-up">
-      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-center">
-        Up Center
-      </mark>
-      <span id="tooltip-up-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="c-bolt-tooltip__content-bubble">
-          center aligned
-        </span>
-      </span>
-    </span>
-    •
-    <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-right is-up">
-      <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-up-right">
-        Up Right
-      </mark>
-      <span id="tooltip-up-right" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
-        <span class="c-bolt-tooltip__content-bubble">
-          right aligned
-        </span>
-      </span>
-    </span>
-  </p>
+  <div class="c-bolt-band c-bolt-band--small">
+    <h2 class="c-bolt-headline c-bolt-headline--xxlarge">
+      Long tooltips
+    </h2>
+    {% grid %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-push-right is-valign-top">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-right-top">
+              Push Right Top
+            </mark>
+            <span id="tooltip-push-right-top" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push right top. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-align-left is-push-down">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-down-left">
+              Push Down Left
+            </mark>
+            <span id="tooltip-push-down-left" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Down Left. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+          •
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-align-center is-push-down">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-down-center">
+              Push Down Center
+            </mark>
+            <span id="tooltip-push-down-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Down Center. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+          •
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-align-right is-push-down">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-down-right">
+              Push Down Right
+            </mark>
+            <span id="tooltip-push-down-right" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Down Right. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-push-left is-valign-top">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-left-top">
+              Push Left Top
+            </mark>
+            <span id="tooltip-push-left-top" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push left top. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+    {% endgrid %}
+  </div>
+  <div class="c-bolt-band c-bolt-band--small">
+    {% grid %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-push-right is-valign-center">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-right-center">
+              Push Right Center
+            </mark>
+            <span id="tooltip-push-right-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push right center. Class aptent taciti sociosqu.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-push-left is-valign-center">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-left-center">
+              Push Left Center
+            </mark>
+            <span id="tooltip-push-left-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push left center. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+    {% endgrid %}
+  </div>
+  <div class="c-bolt-band c-bolt-band--small">
+    {% grid %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-push-right is-valign-bottom">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-right-bottom">
+              Push Right Bottom
+            </mark>
+            <span id="tooltip-push-right-bottom" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push right bottom. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-align-left is-push-up">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-up-left">
+              Push Up Left
+            </mark>
+            <span id="tooltip-push-up-left" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Up Left. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+          •
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-align-center is-push-up">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-up-center">
+              Push Up Center
+            </mark>
+            <span id="tooltip-push-up-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Up Center. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+          •
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-align-right is-push-up">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-up-right">
+              Push Up Right
+            </mark>
+            <span id="tooltip-push-up-right" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Up Right. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help is-push-left is-valign-bottom">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-left-bottom">
+              Push Left Bottom
+            </mark>
+            <span id="tooltip-push-left-bottom" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push left bottom. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+    {% endgrid %}
+  </div>
+  <div class="c-bolt-band c-bolt-band--small">
+    <h2 class="c-bolt-headline c-bolt-headline--xxlarge">
+      Short tooltips
+    </h2>
+    {% grid %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-push-right is-valign-center">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-right-center">
+              Push Right Center
+            </mark>
+            <span id="tooltip-push-right-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Right Center</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-align-left is-push-up">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-up-left">
+              Push Up Left
+            </mark>
+            <span id="tooltip-push-up-left" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Up Left</span>
+              </span>
+            </span>
+          </span>
+          •
+          <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-align-center is-push-up">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-up-center">
+              Push Up Center
+            </mark>
+            <span id="tooltip-push-up-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Up Center</span>
+              </span>
+            </span>
+          </span>
+          •
+          <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-align-right is-push-up">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-up-right">
+              Push Up Right
+            </mark>
+            <span id="tooltip-push-up-right" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Up Right</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+      {% cell "u-bolt-width-1/1 u-bolt-width-4/12@small" %}
+        <p>
+          <span class="c-bolt-tooltip c-bolt-tooltip--help c-bolt-tooltip--nowrap is-push-left is-valign-center">
+            <mark class="c-bolt-tooltip__trigger" aria-describedby="tooltip-push-left-center">
+              Push Left Center
+            </mark>
+            <span id="tooltip-push-left-center" class="c-bolt-tooltip__content" role="tooltip" aria-hidden="true">
+              <span class="c-bolt-tooltip__content-bubble">
+                <span class="c-bolt-text c-bolt-text--small">Push Left Center</span>
+              </span>
+            </span>
+          </span>
+        </p>
+      {% endcell %}
+    {% endgrid %}
+  </div>
 </div>
