fix: adding missing video component package to components-all sass partial

--- a/packages/components/components.scss
+++ b/packages/components/components.scss
@@ -17,6 +17,7 @@
 @import '@bolt/components-image';
 @import '@bolt/components-icon';
 @import '@bolt/components-logo';
+@import '@bolt/components-video';
 @import '@bolt/components-page-header';
 @import '@bolt/components-page-footer';
 @import '@bolt/components-site';
