fix: adding border options

--- a/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.twig
+++ b/src/_patterns/01-core/05-objects/bolt-ui-list-object/src/ui-list.twig
@@ -15,12 +15,14 @@
 {% set componentName = "ui-list" %}
 {% set baseClass = prefix ~ componentName %}
 {% set size = size | default("medium") %}
+{% set border = border == false and border is not null ? "false" : "true" %}
 {% set tag = tag in tags ? tag: "ul" %}
 
 
 {% set classes = [
   baseClass,
   size in sizes ? baseClass ~ "--" ~ size : "",
+  border == "true" ? baseClass ~ "--bordered" : baseClass ~ "--borderless"
 ] %}
 
 
