refactor: update iPad device viewer to be fully fluid / responsive

--- a/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer.scss
+++ b/src/_patterns/02-components/bolt-device-viewer/src/_device-viewer.scss
@@ -43,6 +43,7 @@ bolt-device-viewer {
   overflow: hidden; // Unfortunately zooming + scrolling is very, very tricky. Forcing this for now.
   border-radius: 1px;
   height: 0;
+  background-color: bolt-color(black);
 }
 
 .c-bolt-device-viewer__home {
